<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".surtir.Fragmento_pedido_enviado">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_pedido_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="TextView"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/Creado_por"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_nombre_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="TextView"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:gravity="right"
                    android:text="@string/Recibido" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.romainpiel.shimmer.ShimmerTextView
                    android:id="@+id/shimmer_tv"
                    android:visibility="gone"
                    android:text="@string/Pedido_recibido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="25sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_pedidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>